<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".fruitmanager.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/layout_marin_padding_10">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_image_height"
                android:src="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_marin_padding_10"
                android:layout_marginRight="@dimen/layout_marin_padding_10">

                <AutoCompleteTextView
                    android:id="@+id/edt_LI_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawableRight="@drawable/ic_del"
                    android:drawablePadding="@dimen/layout_marin_padding_10"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/layout_marin_padding_10"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_LI_Pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableRight="@drawable/ic_show_off"
                    android:drawablePadding="@dimen/layout_marin_padding_10"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorWhite"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.CardView
                android:id="@+id/btn_LI_Login"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/login_marin_top_button"
                android:layout_height="@dimen/login_height_button"
                android:backgroundTint="@color/colorPrimary"
                app:cardCornerRadius="@dimen/layout_marin_padding_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login"
                    android:textSize="@dimen/size_text_24"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>



          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/layout_marin_padding_10"
             android:gravity="center"
              android:orientation="horizontal">

              <TextView
                  android:layout_width="wrap_content"
                  android:gravity="center"
                  android:layout_height="wrap_content"
                  android:text="@string/no_account"
                  android:textSize="@dimen/size_text_16" />

              <TextView
                  android:id="@+id/tv_LI_SignUp"
                  android:layout_width="wrap_content"
                  android:gravity="center"
                  android:layout_height="wrap_content"
                  android:paddingLeft="@dimen/layout_marin_padding_5"
                  android:text="@string/link_sign_up"
                  android:textSize="@dimen/size_text_16"
                  android:textStyle="bold"
                  android:textColor="@color/colorPrimary"/>

          </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>