<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_pay"
        android:textSize="@dimen/size_text_20"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_margin="@dimen/layout_marin_padding_20"/>

    <TextView
        android:id="@+id/tv_pTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_marin_padding_10"
        android:text="1.000.000đ"
        android:textSize="@dimen/size_text_20"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_marin_padding_5">

        <EditText
            android:id="@+id/edt_p_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="@dimen/layout_marin_padding_10"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_marin_padding_5">

        <EditText
            android:id="@+id/edt_p_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/layout_marin_padding_10"
            android:hint="@string/phone"
            android:maxLength="10"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_marin_padding_5">

        <EditText
            android:id="@+id/edt_p_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="@dimen/layout_marin_padding_10"
            android:hint="@string/address"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
